test(phase4): bound classpath descriptor scanning